--- a/mall-admin/src/main/resources/application-prod.properties
+++ b/mall-admin/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@ spring.datasource.username=reader
 spring.datasource.password=123456
 #===datasource end===
 
-#\u914D\u7F6E\u65E5\u5FD7\u751F\u6210\u8DEF\u5F84
+#配置日志生成路径
 logging.path=/var/logs
 
 #===druid start===
