--- a/mall-admin/src/main/resources/application-prod.properties
+++ b/mall-admin/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 #===datasource start===
-spring.datasource.url=jdbc:mysql://db:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-spring.datasource.username=reader
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://47.98.170.248:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=root
 #===datasource end===
 
 #配置日志生成路径
