--- a/mall-mbg/src/main/resources/generator.properties
+++ b/mall-mbg/src/main/resources/generator.properties
@@ -1,4 +1,4 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.connectionURL=jdbc:mysql://localhost:3306/mall
+jdbc.connectionURL=jdbc:mysql://47.98.170.248:3306/mall
 jdbc.userId=root
 jdbc.password=root
