--- a/mall-search/src/main/resources/application-prod.properties
+++ b/mall-search/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 #===datasource start===
-spring.datasource.url=jdbc:mysql://db:3306/mall?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://47.98.170.248:3306/mall?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=reader
 spring.datasource.password=123456
 #===datasource end===
