更新Elasticsearch配置文件信息

--- a/mall-search/src/main/resources/application-dev.properties
+++ b/mall-search/src/main/resources/application-dev.properties
@@ -19,6 +19,12 @@ spring.datasource.druid.stat-view-servlet.login-password=druid
 #===druid end===
 
 #===es start===
+#Elasticsearch 集群名。(默认值: elasticsearch)
+spring.data.elasticsearch.cluster-name = elasticsearch
+#开启 Elasticsearch 仓库。(默认值:true。)
 spring.data.elasticsearch.repositories.enabled = true
+#集群节点地址列表，用逗号分隔。如果没有指定，就启动一个客户端节点。
 spring.data.elasticsearch.cluster-nodes = 127.0.0.1:9300
+#用来配置客户端的额外属性
+#spring.data.elasticsearch.propertie
 #===es end===
