将前端代码和后端代码分开仓库管理

--- a/mall-admin/src/main/resources/application.properties
+++ b/mall-admin/src/main/resources/application.properties
@@ -36,10 +36,10 @@ jwt.tokenHead=Bearer
 #===JWT end===
 
 #===OSS start===
-aliyun.oss.endpoint=oss-cn-shenzhen.aliyuncs.com
-aliyun.oss.accessKeyId=test
-aliyun.oss.accessKeySecret=test
-aliyun.oss.bucketName=macro-oss
+aliyun.oss.endpoint=oss-cn-beijing.aliyuncs.com
+aliyun.oss.accessKeyId=xiLzAR7OLWDIdkjfp1j8IBSNbPPtEo
+aliyun.oss.accessKeySecret=xiLzAR7OLWDIdkjfp1j8IBSNbPPtEo
+aliyun.oss.bucketName=macro-oss-2019
 aliyun.oss.policy.expire=300
 aliyun.oss.maxSize=10
 aliyun.oss.callback=http://localhost:8080/aliyun/oss/callback
