--- a/mall-portal/src/main/resources/application-prod.properties
+++ b/mall-portal/src/main/resources/application-prod.properties
@@ -7,8 +7,8 @@ logging.path=/var/logs
 
 #===datasource start===
 spring.datasource.url=jdbc:mysql://47.98.170.248:3306/mall?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=reader
-spring.datasource.password=123456
+spring.datasource.username=root
+spring.datasource.password=root
 #===datasource end===
 
 #===druid start===
